# document-text-extractor

./: .gitignore  LIMITATIONS.md  README.md  pyproject.toml  requirements.txt
docs/plans/: document-extractor-project-plan.md
sample_docs/: project_status.docx  project_status_extracted.json  quarterly_report_extracted.json
src/: __init__.py  __main__.py  base_extractor.py  logging_config.py  models.py  router.py
src/extractors/: __init__.py  docx_extractor.py  pdf_extractor.py  pptx_extractor.py  xlsx_extractor.py
src/utils/: __init__.py  markdown_helpers.py
tests/: __init__.py  conftest.py  test_docx_extractor.py  test_models.py  test_pdf_extractor.py  test_pptx_extractor.py  test_router.py  test_utils.py  test_xlsx_extractor.py
